--- a/GraphTheoristSketchpad/GraphTheoristSketchpad/MainWindow.xaml
+++ b/GraphTheoristSketchpad/GraphTheoristSketchpad/MainWindow.xaml
@@ -92,16 +92,22 @@
         Visibility="{Binding IsChecked, ElementName=ToggleInfoPanelButton, Converter={StaticResource BoolToVisibilityConverter}}">
                 <ScrollViewer VerticalScrollBarVisibility="Auto">
                     <StackPanel Margin="10">
+                        <!-- Graph Display Settings Checkboxes -->
+                        <TextBlock Text="Graph Display Settings" FontSize="16" FontWeight="Bold" Margin="0,10,0,5"/>
+                        <CheckBox x:Name="DisplayVertexDegreeCheckbox" Checked="DisplayVertexDegreeCheckbox_Checked" Content="Display Vertex Degree" Margin="0,5,0,0"/>
+                        <CheckBox x:Name="DisplayBridgesLinksCheckbox" Checked="DisplayBridgesLinksCheckbox_Checked"  Content="Display Bridges and Links" Margin="0,5,0,0"/>
+                        
+                        <Separator Margin="0,10,0,10"/>
+
                         <TextBlock Text="Graph Information" FontSize="16" FontWeight="Bold" Margin="0,0,0,10"/>
                         <Label Content="Incidence Matrix:" />
-                        <TextBox x:Name="IncidenceMatrixTextBox" Margin="0,5,0,0"
-                     IsReadOnly="True"
-                     Height="100"
-                     TextWrapping="Wrap"
-                     VerticalScrollBarVisibility="Auto"
-                     HorizontalScrollBarVisibility="Auto"
-                     Background="LightGray"
-                     Foreground="Black"/>
+                        <DataGrid x:Name="IncidenceMatrixDataGrid" Margin="0,5,0,0" 
+                          IsReadOnly="True" 
+                          AutoGenerateColumns="True" 
+                          HeadersVisibility="All" 
+                          HorizontalScrollBarVisibility="Auto"
+                          VerticalScrollBarVisibility="Auto" 
+                          Background="LightGray"/>
                         <Label Content="Number of Vertices: "/>
                         <TextBox Name="VertexCountTextbox" IsReadOnly="True"/>
                         <Label Content="Number of Edges: "/>
