--- a/GraphTheoristSketchpad/GraphTheoristSketchpad/MainWindow.xaml
+++ b/GraphTheoristSketchpad/GraphTheoristSketchpad/MainWindow.xaml
@@ -63,10 +63,12 @@
                 <Button Name="btnAddVertex" Content="Add Vertex" Click="btnAddVertex_Click" Style="{StaticResource ToolButtonStyle}" />
                 <Button Name="btnAddEdge" Content="Add Edge" Click="btnAddEdge_Click" Style="{StaticResource ToolButtonStyle}" />
                 <Button Name="btnErase" Content="Erase" Click="btnErase_Click" Style="{StaticResource ToolButtonStyle}" />
+                <Button x:Name="ClearButton" Content="Clear" Click="ClearButton_Click" Style="{StaticResource ToolButtonStyle}"/>
                 <Button Name="btnView" Content="View" Click="btnView_Click" Style="{StaticResource ToolButtonStyle}" />
                 <Button Name="btnEdit" Content="Edit" Click="btnEdit_Click" Style="{StaticResource ToolButtonStyle}" />
                 <ToggleButton Name="btnToggleDirected" Content="Directed" Checked="btnToggleDirected_Checked" Unchecked="btnToggleDirected_Unchecked" Style="{StaticResource ToolButtonStyleToggle}" />
                 <ToggleButton x:Name="ToggleInfoPanelButton" Content="Show Info" Click="ToggleInfoPanelButton_Click" Style="{StaticResource ToolButtonStyleToggle}" />
+                <ToggleButton x:Name="ToggleFramedGraphButton" Content="Show Frame" Click="ToggleFramedGraphButton_Click" Style="{StaticResource ToolButtonStyleToggle}"/>
             </ToolBar>
         </ToolBarTray>
 
@@ -119,15 +121,10 @@
                                       HorizontalScrollBarVisibility="Auto"
                                       VerticalScrollBarVisibility="Auto" 
                                       Background="LightGray"/>
-                            <Label Content="Number of Vertices: "/>
-                            <TextBox Name="VertexCountTextbox" IsReadOnly="True"/>
-                            <Label Content="Number of Edges: "/>
-                            <TextBox Name="EdgeCountTextbox" IsReadOnly="True"/>
-                            <Label Content="Number of Components: "/>
-                            <TextBox Name="ComponentCountTextbox" IsReadOnly="True"/>
-                            <ToggleButton Content="Is Bipartite?"
-                                          IsChecked="{Binding IsBipartite}"
-                                          IsHitTestVisible="False" />
+                            <Label Name="VertexCountLabel" Content="Number of Vertices: "/>
+                            <Label Name="EdgeCountLabel" Content="Number of Edges: "/>
+                            <Label Name="ComponentCountLabel" Content="Number of Components: "/>
+                            <Label Name="BipartiteLabel" Content="Is Bipartite? "/>
                             <TextBlock Text="Additional graph details or metrics can go here." TextWrapping="Wrap"/>
                         </StackPanel>
                     </ScrollViewer>
