--- a/GraphTheoristSketchpad/GraphTheoristSketchpad/MainWindow.xaml
+++ b/GraphTheoristSketchpad/GraphTheoristSketchpad/MainWindow.xaml
@@ -108,8 +108,8 @@
                         <StackPanel Margin="10">
                             <!-- Graph Display Settings Checkboxes -->
                             <TextBlock Text="Graph Display Settings" FontSize="16" FontWeight="Bold" Margin="0,10,0,5"/>
-                            <CheckBox x:Name="DisplayVertexDegreeCheckbox" Checked="DisplayVertexDegreeCheckbox_Checked" Content="Display Vertex Degree" Margin="0,5,0,0"/>
-                            <CheckBox x:Name="DisplayBridgesLinksCheckbox" Checked="DisplayBridgesLinksCheckbox_Checked"  Content="Display Bridges and Links" Margin="0,5,0,0"/>
+                            <CheckBox x:Name="DisplayVertexDegreeCheckbox" Click="DisplayVertexDegreeCheckbox_Click" Content="Display Vertex Degree" Margin="0,5,0,0"/>
+                            <CheckBox x:Name="DisplayBridgesLinksCheckbox" Click="DisplayBridgesLinksCheckbox_Click"  Content="Display Bridges and Links" Margin="0,5,0,0"/>
 
                             <Separator Margin="0,10,0,10"/>
                             <TextBlock Text="Graph Information" FontSize="16" FontWeight="Bold" Margin="0,0,0,10"/>
