--- a/GraphTheoristSketchpad/GraphTheoristSketchpad/MainWindow.xaml
+++ b/GraphTheoristSketchpad/GraphTheoristSketchpad/MainWindow.xaml
@@ -68,7 +68,6 @@
                 <Button Name="btnEdit" Content="Edit" Click="btnEdit_Click" Style="{StaticResource ToolButtonStyle}" />
                 <ToggleButton Name="btnToggleDirected" Content="Directed" Checked="btnToggleDirected_Checked" Unchecked="btnToggleDirected_Unchecked" Style="{StaticResource ToolButtonStyleToggle}" />
                 <ToggleButton x:Name="ToggleInfoPanelButton" Content="Show Info" Click="ToggleInfoPanelButton_Click" Style="{StaticResource ToolButtonStyleToggle}" />
-                <ToggleButton x:Name="ToggleFramedGraphButton" Content="Show Frame" Click="ToggleFramedGraphButton_Click" Style="{StaticResource ToolButtonStyleToggle}"/>
                 <Button x:Name="RefitButton" Content="Refit" Click="RefitButton_Click" Style="{StaticResource ToolButtonStyle}"/>
             </ToolBar>
         </ToolBarTray>
@@ -113,6 +112,8 @@
                                     <!-- Display Options -->
                                     <CheckBox x:Name="DisplayVertexDegreeCheckbox" Click="DisplayVertexDegreeCheckbox_Click" Content="Display Vertex Degree" Margin="0,5,0,0"/>
                                     <CheckBox x:Name="DisplayBridgesLinksCheckbox" Click="DisplayBridgesLinksCheckbox_Click" Content="Display Bridges and Links" Margin="0,5,0,0"/>
+                                    <CheckBox x:Name="DisplayBipartiteSetsCheckbox" Click="DisplayBipartiteSetsCheckbox_Click" Content="Display Bipartite Sets" Margin="0,5,0,0"/>
+                                    <CheckBox x:Name="ToggleFramedGraphButton" Content="Show Frame" Click="ToggleFramedGraphButton_Click" Margin="0,5,0,0"/>
                                 </StackPanel>
                             </Expander>
                             <Separator Margin="0,10,0,10"/>
