--- a/GraphTheoristSketchpad/GraphTheoristSketchpad/MainWindow.xaml
+++ b/GraphTheoristSketchpad/GraphTheoristSketchpad/MainWindow.xaml
@@ -174,6 +174,7 @@
                                     <Label Name="EdgeCountLabel" Content="0" Margin="0,0,0,5"/>
                                     <Label Name="ComponentCountLabel" Content="0" Margin="0,0,0,5"/>
                                     <Label Name="BipartiteLabel" Content="Unknown" Margin="0,0,0,5"/>
+                                    <Label Name="MinimumColorLabel" Content="Unknown" Margin="0,0,0,5"/>
                                     <TextBlock Text="Additional graph details or metrics can go here." TextWrapping="Wrap" Margin="0,5,0,0"/>
                                 </StackPanel>
                             </Expander>
