--- a/GraphTheoristSketchpad/GraphTheoristSketchpad/MainWindow.xaml
+++ b/GraphTheoristSketchpad/GraphTheoristSketchpad/MainWindow.xaml
@@ -114,6 +114,9 @@
                                     <CheckBox x:Name="DisplayBridgesLinksCheckbox" Click="DisplayBridgesLinksCheckbox_Click" Content="Display Bridges and Links" Margin="0,5,0,0"/>
                                     <CheckBox x:Name="DisplayBipartiteSetsCheckbox" Click="DisplayBipartiteSetsCheckbox_Click" Content="Display Bipartite Sets" Margin="0,5,0,0"/>
                                     <CheckBox x:Name="ToggleFramedGraphButton" Content="Show Frame" Click="ToggleFramedGraphButton_Click" Margin="0,5,0,0"/>
+                                    <CheckBox x:Name="GraphChromaticColoringCheckbox" Content="Color Graph with" Margin="0,5,0,0"/>
+                                    <TextBox x:Name="kColoringNumber" Text="0" Margin="0,5,0,0"/>
+                                    <Label Content="Colors" Margin="0,5,0,0"/>
                                 </StackPanel>
                             </Expander>
                             <Separator Margin="0,10,0,10"/>
