--- a/GraphTheoristSketchpad/GraphTheoristSketchpad/MainWindow.xaml
+++ b/GraphTheoristSketchpad/GraphTheoristSketchpad/MainWindow.xaml
@@ -119,7 +119,7 @@
                                         <!-- Chromatic Coloring Inline -->
                                         <StackPanel Orientation="Horizontal" Margin="0,5,0,0" VerticalAlignment="Center">
                                             <CheckBox x:Name="ColorGraphCheckbox" Content="Color Graph with" Margin="0,0,5,0" VerticalAlignment="Center" Click="ColorGraphCheckbox_Click"/>
-                                            <TextBox x:Name="KColoringTextbox" Text="0" Width="40" Margin="0,0,5,0" VerticalAlignment="Center" TextChanged="KColoringTextbox_TextChanged"/>
+                                            <TextBox x:Name="KColoringTextbox" Width="40" Margin="0,0,5,0" VerticalAlignment="Center" TextChanged="KColoringTextbox_TextChanged"/>
                                             <Label Content="colors" Margin="0,0,0,0" VerticalAlignment="Center"/>
                                         </StackPanel>
 
